Remove dependency on javax.xml.bind package.