@@ -16,8 +16,6 @@ import com.jme3.texture.Texture;
 import com.jme3.texture.Texture2D;
 import com.jme3.util.IntMap;
 import com.jme3.util.mikktspace.MikktspaceTangentGenerator;
-
-import javax.xml.bind.DatatypeConverter;
 import java.io.*;
 import java.nio.Buffer;
 import java.nio.FloatBuffer;
@@ -543,7 +541,8 @@ public class GltfLoader implements AssetLoader {
         if (uri != null) {
             if (uri.startsWith("data:")) {
                 //base 64 embed data
-                data = DatatypeConverter.parseBase64Binary(uri.substring(uri.indexOf(",") + 1));
+                //data = DatatypeConverter.parseBase64Binary(uri.substring(uri.indexOf(",") + 1));
+                data = Base64.getDecoder().decode(uri.substring(uri.indexOf(",") + 1));
             } else {
                 //external file let's load it
                 if (!uri.endsWith(".bin")) {
@@ -714,7 +713,7 @@ public class GltfLoader implements AssetLoader {
         } else if (uri.startsWith("data:")) {
             //base64 encoded image
             String[] uriInfo = uri.split(",");
-            byte[] data = DatatypeConverter.parseBase64Binary(uriInfo[1]);
+            byte[] data = Base64.getDecoder().decode(uriInfo[1]);
             String headerInfo = uriInfo[0].split(";")[0];
             String extension = headerInfo.split("/")[1];
             TextureKey key = new TextureKey("image" + sourceIndex + "." + extension, flip);
